@@ -8,7 +8,7 @@
 // ####ECOSGPLCOPYRIGHTBEGIN####                                            
 // -------------------------------------------                              
 // This file is part of eCos, the Embedded Configurable Operating System.   
-// Copyright (C) 2011 Free Software Foundation, Inc.                        
+// Copyright (C) 2011, 2013 Free Software Foundation, Inc.                        
 //
 // eCos is free software; you can redistribute it and/or modify it under    
 // the terms of the GNU General Public License as published by the Free     
@@ -64,7 +64,35 @@
 #include <cyg/hal/hal_if.h>             // HAL header
 #include <cyg/hal/freescale_edma.h>     // Freescale eDMA defs
 
-// Channel priority register index
+// Channel priority register indexing
+#if (CYG_BYTEORDER == CYG_MSBFIRST)  // AKA Big endian
+
+#define EDMA_CHAN_PRIORITY_I(__chan_i) (__chan_i)
+
+#else  // AKA Big endian
+// Indices for cyghwr_hal_freescale_edma_t::dchpri[]
+enum {
+    FREESCALE_DMA_PRI_CH3,  FREESCALE_DMA_PRI_CH2,
+    FREESCALE_DMA_PRI_CH1,  FREESCALE_DMA_PRI_CH0,
+    FREESCALE_DMA_PRI_CH7,  FREESCALE_DMA_PRI_CH6,
+    FREESCALE_DMA_PRI_CH5,  FREESCALE_DMA_PRI_CH4,
+    FREESCALE_DMA_PRI_CH11, FREESCALE_DMA_PRI_CH10,
+    FREESCALE_DMA_PRI_CH9,  FREESCALE_DMA_PRI_CH8,
+    FREESCALE_DMA_PRI_CH15, FREESCALE_DMA_PRI_CH14,
+    FREESCALE_DMA_PRI_CH13, FREESCALE_DMA_PRI_CH12
+#if CYGNUM_HAL_FREESCALE_EDMA_CHAN_NUM > 16
+    ,
+    FREESCALE_DMA_PRI_CH19, FREESCALE_DMA_PRI_CH18,
+    FREESCALE_DMA_PRI_CH17, FREESCALE_DMA_PRI_CH16,
+    FREESCALE_DMA_PRI_CH23, FREESCALE_DMA_PRI_CH22,
+    FREESCALE_DMA_PRI_CH21, FREESCALE_DMA_PRI_CH20,
+    FREESCALE_DMA_PRI_CH27, FREESCALE_DMA_PRI_CH26,
+    FREESCALE_DMA_PRI_CH25, FREESCALE_DMA_PRI_CH24,
+    FREESCALE_DMA_PRI_CH31, FREESCALE_DMA_PRI_CH30,
+    FREESCALE_DMA_PRI_CH29, FREESCALE_DMA_PRI_CH28
+#endif
+};
+
 const cyg_uint8 const PRICHAN_I[CYGNUM_HAL_FREESCALE_EDMA_CHAN_NUM] =
 {
     FREESCALE_DMA_PRI_CH0,  FREESCALE_DMA_PRI_CH1,
@@ -87,6 +115,10 @@ const cyg_uint8 const PRICHAN_I[CYGNUM_HAL_FREESCALE_EDMA_CHAN_NUM] =
     FREESCALE_DMA_PRI_CH30, FREESCALE_DMA_PRI_CH31
 #endif
 };
+
+#define EDMA_CHAN_PRIORITY_I(__chan_i) (PRICHAN_I[__chan_i])
+
+#endif
 
 // Find an eDMA channel with given priority
 static volatile cyg_uint8*
@@ -145,14 +177,14 @@ hal_freescale_edma_init_1chan(
     }
 
     if((chan_p->dma_prio != FREESCALE_EDMA_DCHPRI_ASIS) &&
-       (edma_p->dchpri[PRICHAN_I[chan_p->dma_chan_i]] != chan_p->dma_prio))
+       (edma_p->dchpri[EDMA_CHAN_PRIORITY_I(chan_p->dma_chan_i)] != chan_p->dma_prio))
     {
         group_i = chan_p->dma_chan_i >= CYGNUM_HAL_FREESCALE_EDMA_GROUP_SIZE ? 1 : 0;
         if((prev_ch_reqprio_p =
             hal_freescale_edma_find_chan_with_pri(edma_p, chan_p->dma_prio, group_i)))
         {
-            oldprio = edma_p->dchpri[PRICHAN_I[chan_p->dma_chan_i]];
-            edma_p->dchpri[PRICHAN_I[chan_p->dma_chan_i]] = chan_p->dma_prio;
+            oldprio = edma_p->dchpri[EDMA_CHAN_PRIORITY_I(chan_p->dma_chan_i)];
+            edma_p->dchpri[EDMA_CHAN_PRIORITY_I(chan_p->dma_chan_i)] = chan_p->dma_prio;
             *prev_ch_reqprio_p = oldprio;
         }
     }
@@ -249,7 +281,7 @@ hal_freescale_edma_diag(const cyghwr_hal_freescale_dma_set_t *inidat_p, cyg_uint
             diag_printf("Chan %2d: CHCFG=0x%02x (%2d) DCHPRI=0x%02x dmamux[%c]=%p", chan_i,
                         dmamux_p->chcfg[chan_i % 16],
                         FREESCALE_DMAMUX_CHCFG_SOURCE(dmamux_p->chcfg[chan_i % 16]),
-                        edma_p->dchpri[PRICHAN_I[chan_i]],
+                        edma_p->dchpri[EDMA_CHAN_PRIORITY_I(chan_i)],
                         CYGHWR_IO_FREESCALE_DMAMUX0_P == dmamux_p ? '0' : (
 #if CYGNUM_HAL_FREESCALE_EDMA_CHAN_NUM > CYGNUM_HAL_FREESCALE_EDMA_GROUP_SIZE
                         CYGHWR_IO_FREESCALE_DMAMUX1_P == dmamux_p ? '1' :
@@ -298,7 +330,7 @@ void hal_freescale_edma_tcd_diag(cyghwr_hal_freescale_edma_tcd_t *tcd_p, cyg_int
                     tcd_p->slast, tcd_p->slast);
         diag_printf("%s    %s=%d [%p]\n", prefix,
                     (tcd_p->csr & FREESCALE_EDMA_CSR_ESG_M) ? "sga" : "dlast",
-                    tcd_p->dlast, tcd_p->sga);
+                    tcd_p->dlast_sga.dlast, tcd_p->dlast_sga.sga);
         diag_printf("%s    biter = %d, citer = %d\n", prefix,
                     tcd_p->biter.elinkno, tcd_p->citer.elinkno);
         diag_printf("%s    CSR=0x%04x\n", prefix, tcd_p->csr);
@@ -311,7 +343,7 @@ void hal_freescale_edma_transfer_diag(cyghwr_hal_freescale_edma_t
     cyghwr_hal_freescale_edma_tcd_t *tcd_p;
     const char *prefix = "";
 
-    for(tcd_p = &edma_p->tcd[chan_i]; tcd_p; tcd_p = tcd_p->sga){
+    for(tcd_p = &edma_p->tcd[chan_i]; tcd_p; tcd_p = tcd_p->dlast_sga.sga){
         hal_freescale_edma_tcd_diag(tcd_p, chan_i, prefix);
         if(!(recurse && (tcd_p->csr & FREESCALE_EDMA_CSR_ESG_M)))
             break;
